fixed gallery formatting on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -211,7 +211,7 @@ a:hover, a:visited, a:link, a:active
 
     .gallery-figure {
         display: flex;
-        height: 80vh;
+        
         flex-direction: column;
         align-items: center;
         margin: 0 auto;
@@ -226,10 +226,9 @@ a:hover, a:visited, a:link, a:active
     }
 
     .gallery-img {
-        display: flex;
         width: 100vw;
-        flex-direction: column;
-        align-items: center;
+        height: fit-content;
+        
         margin: 0 auto;
     }
 
